--- a/style.css
+++ b/style.css
@@ -6,19 +6,21 @@
   }
   
   :root {
-    --primary-color: hsl(170, 100%, 26%);
-    --headline: hsl(210, 11%, 15%);
-    --paragraph: hsl(210, 9%, 31%);
-  
-    --brand-beige: hsl(39, 100%, 97%);
-    --brand-light: hsl(148, 23%, 89%);
+    --hue: 290;
+  --primary-color: hsl(var(--hue), 100%, 26%);
+  --headline: hsl(210, 11%, 15%);
+  --paragraph: hsl(210, 9%, 31%);
 
-    --bg-light: hsl(180, 15%, 97%);
+  --brand-beige: hsl(39, 100%, 97%);
+  --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-light-2: hsl(calc(var(--hue) + 10), 14%, 97%);
+  --brand-dark: hsl(var(--hue), 100%, 14%);
 
-  
-    font-size: 62.5%; /* 1rem = 10px */
-  
-    --nav-height: 7.2rem;
+  --bg-light: hsl(180, 14%, 97%);
+
+  font-size: 62.5%; /* 1rem = 10px */
+
+  --nav-height: 7.2rem;
   }
   
   html{
@@ -43,7 +45,7 @@
   }
   
   .wrapper {
-    width: 37.5rem;
+    width: min(50rem, 100%);
     margin-inline: auto;
     padding-inline: 2.4rem;
   }
@@ -95,6 +97,61 @@
     color: var(--paragraph);
   }
 
+  .button {
+    background: var(--primary-color);
+  
+    border: none;
+    border-radius: 4rem;
+  
+    margin-bottom: 6rem;
+  
+    padding: 1.6rem 3.2rem;
+    width: fit-content;
+  
+    color: white;
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.6rem;
+  
+    
+    text-decoration: none;
+    transition: background 200ms;
+  }
+
+  .button:hover{
+    background-color: var(--brand-dark);
+  }
+
+  /*=== CUSTOM COLORS =================================*/
+  #services .card circle{
+    fill: var(--brand-light)
+  }
+
+  
+  #navi .logo path[fill*="#00856F"],
+  #BackToTopButton circle{
+    fill: var(--primary-color);
+  }
+  
+  body.menu-expanded #navi .logo path,
+  #navi.scroll .logo path{
+    fill: white;
+  }
+
+  button.open-menu path[stroke*="#00856F"],
+  #contact li path{
+    stroke: var(--primary-color);
+  }
+
+  #navi.scroll button.open-menu path[stroke*="#00856F"]{
+    stroke: white;
+  }
+
   /*=== NAVIGATION =================================*/
   nav {
     display: flex;
@@ -118,14 +175,6 @@
     background: var(--primary-color);
   }
   
-  nav.scroll .logo path {
-    fill: white;
-  }
-
-  nav.scroll button path {
-    stroke: white;
-  }
-
   nav button{
     background: none;
     border: none;
@@ -159,7 +208,6 @@
   }
   
   body.menu-expanded .menu{
-    position: fixed;
     top: 0;
     left: 0;
     background: var(--primary-color);
@@ -209,6 +257,12 @@
     margin-bottom: 8rem;
   }
 
+  .menu .button:hover{
+    background-color: var(--primary-color);
+    color: white;
+    filter: brightness(1.3);
+  }
+
   .social-links{
     display: flex;
     align-items: center;
@@ -229,17 +283,22 @@
   body.menu-expanded button path {
     stroke: white;
   }
+
+  nav .menu,
+  nav .close-menu{
+    position: fixed;
+  }
   
   /*=== HOME =================================*/
   #home {
+    padding-block: 0;
     padding-top: calc(4.1rem + var(--nav-height));
-    
   }
   
   #home::before {
     content: '';
     width: 100%;
-    height: calc(108rem + var(--nav-height));
+    height: calc(76% + var(--nav-height));
     background-color: var(--brand-light);
     display: block;
   
@@ -247,6 +306,10 @@
     top: 0;
     left: 0;
     z-index: -1;
+  }
+
+  #home .button{
+    margin-inline: auto;
   }
   
   #home p {
@@ -258,31 +321,6 @@
     margin-bottom: 3.2rem;
   }
   
-  #home button {
-    background: var(--primary-color);
-  
-    border: none;
-    border-radius: 4rem;
-  
-    margin-bottom: 6rem;
-  
-    height: 6.2rem;
-    width: 26.3rem;
-  
-    color: white;
-    font-size: 1.4rem;
-    font-weight: 700;
-    text-transform: uppercase;
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1.6rem;
-  
-    margin-right: auto;
-    margin-left: auto;
-  }
-  
   #home img {
     width: 26.4rem;
     display: block;
@@ -291,7 +329,7 @@
   }
   
   #home .stats {
-    width: 32.7rem;
+    width: 100%;
     padding-block: 4rem;
     margin-inline: auto;
   
@@ -360,4 +398,353 @@
     margin-top: 2.4rem;
     margin-bottom: 6rem;
   }
+
+    /*=== CONTACT =================================*/
+  #contact{
+    text-align: left;
+  }
+
+  #contact header{
+    margin-bottom: 3.2rem;
+  }
+
+  #contact ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+
+    margin-bottom: 3.2rem;
+  }
+
+  #contact ul li{
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+  }
+
+  /*=== FOOTER =================================*/
+  footer{
+    background-color: var(--primary-color);
+    padding-block: 6rem;
+
+    text-align: left;
+
+    color: white;
+  }
+
+  footer .logo{
+    display: inline-block;
+    margin-bottom: 2.4rem;
+  }
+
+  footer .logo svg{
+    width: 23.6rem;
+    height: 3.1rem;
+  }
+
+  footer .logo path{
+    fill: white;
+  }
+
+  footer p{
+    color: var(--brand-beige);
+    line-height: 2;
+
+    margin-bottom: 3.2rem;
+  }
+
+  footer .social-links{
+    justify-content: flex-start;
+  }
+
+  /*=== BackToTopButton ========*/
+
+  #BackToTopButton{
+    position: fixed;
+    bottom: 1rem;
+    right: 2.5rem;
+
+    opacity: 0;
+    visibility: hidden;
+
+    transform: translateY(100%);
+    transition: 200ms;
+  }
+
+  #BackToTopButton.show{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+
+  /*=== RESPONSIVO ========*/
+  @media (min-width: 1024px) {
+
+    /*=== GERAL ========*/
+    .wrapper {
+    width: min(112rem, 100%);
+    display: grid;
+  }
+
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section header h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+
+    /*=== NAVIGATION ========*/
+
+    /*=== RESET ========*/
+    nav#navi .wrapper * {
+      margin: 0;
+      padding: 0;
+      visibility: initial;
+      display: initial;
+      opacity: initial;
+      flex-direction: initial;
+      position: initial;
+      font-size: initial;
+      font-weight: initial;
+      transform: initial;
+      color: initial;
+      background-color: initial;
+      filter: initial;
+    }
   
+    nav#navi .close-menu,
+    nav#navi .open-menu,
+    nav#navi .social-links {
+      display: none;
+    }
+  
+    nav#navi .menu {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 60%;
+    }
+  
+    nav#navi .menu ul:nth-child(1) {
+      display: flex;
+      gap: 3.2rem;
+    }
+  
+    nav#navi .menu ul li a {
+      color: var(--primary-color);
+      opacity: 0.7;
+    }
+  
+    nav#navi .menu a.button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem 2.4rem;
+  
+      border: 1px solid var(--primary-color);
+      border-radius: 4rem;
+  
+      color: var(--primary-color);
+  
+      font-weight: 700;
+      font-size: 1.4rem;
+      line-height: 1.8rem;
+      text-transform: uppercase;
+    }
+  
+    nav#navi .menu a.button:hover {
+      background-color: var(--primary-color);
+      border: none;
+      color: white;
+    }
+  
+    nav#navi.scroll .menu ul li a {
+      color: var(--brand-light-2);
+      opacity: 0.6;
+    }
+  
+    nav#navi.scroll .menu a.button {
+      border-color: white;
+      color: white;
+    }
+  
+    nav#navi .menu li a {
+      transition: opacity 0.4s;
+    }
+  
+    nav#navi .menu li a.active,
+    nav#navi .menu li a:hover {
+      opacity: 1;
+      font-weight: 700;
+    }
+  
+    nav#navi .menu li a::after {
+      content: '';
+      width: 0%;
+      height: 2px;
+      background-color: var(--primary-color);
+  
+      position: relative;
+      bottom: -2rem;
+      left: -0.5rem;
+  
+      display: block;
+  
+      transition: width 0.2s;
+    }
+  
+    nav#navi.scroll .menu li a::after {
+      background-color: white;
+    }
+  
+    nav#navi .menu li a.active::after,
+    nav#navi .menu li a:hover::after {
+      padding-inline: 0.8rem;
+      width: 100%;
+    }
+  
+    nav#navi.scroll .menu li a.active,
+    nav#navi.scroll .menu li a:hover {
+      opacity: 1;
+    }
+  
+    nav#navi.scroll .menu a.button.active,
+    nav#navi.scroll .menu a.button:hover {
+      background-color: var(--primary-color);
+      filter: brightness(1.3);
+      border: none;
+    }
+
+    /*=== HOME ===================*/
+    #home::before {
+      height: calc(96% - var(--nav-height));
+    }
+  
+    #home {
+      padding-top: var(--nav-height);
+    }
+  
+    #home .wrapper {
+      grid-template-columns: 60.5rem 1fr;
+      grid-template-areas:
+        'A B'
+        'C C';
+    }
+  
+    #home .col-a {
+      text-align: left;
+      align-self: center;
+    }
+  
+    #home h1 {
+      font-size: 5.2rem;
+    }
+  
+    #home .content p {
+      font-size: 1.8rem;
+    }
+  
+    #home .stats {
+      grid-area: C;
+  
+      flex-direction: row;
+      padding: 6rem;
+      gap: 0;
+    }
+  
+    #home .stats .stat + .stat {
+      border-left: 1px solid var(--primary-color);
+    }
+  
+    #home .stats .stat {
+      flex: 1;
+    }
+  
+    #home .button {
+      margin: 0;
+    }
+  
+    #home img {
+      width: 42rem;
+    }
+ 
+  
+
+  /*=== SERVICES ===============*/
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /*=== ABOUT =================*/
+  #about .wrapper {
+    grid-template-columns: 48rem 1fr;
+    grid-template-areas: 'B A';
+    gap: 6.7rem;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  /*=== CONTACT ================*/
+  #contact .wrapper {
+    grid-template-columns: 1fr 57.5rem;
+    grid-template-areas: 'A B';
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+
+  /*=== FOOTER =================================*/
+  footer {
+    padding-block: 8rem;
+  }
+  
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'A B';
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+
+  footer .col-b {
+    align-self: center;
+    justify-self: flex-end;
+  }
+
+  footer p {
+    margin-bottom: 0
+  }
+
+
+}
